@@ -1,3 +1,9 @@
+Fri Apr 28 15:31:10 2000  Andrew Cagney  <cagney@b1.cygnus.com>
+
+	From "Serge Nikulin" <nikulin@actsw.amat.com>:
+	* m68k-tdep.c (delta68_in_sigtramp): Return 0 when the function
+ 	name is unknow.
+
 Fri Apr 28 12:21:28 2000  Andrew Cagney  <cagney@b1.cygnus.com>
 
 	From Tim Mooney <mooney@dogbert.cc.ndsu.nodak.edu>:
